Archive2/6c/b3b11c72b4e839/output
main.cpp:1:1: error: 'Matrix33' does not name a type
 Matrix33 Matrix33::inverted() const
 ^
